:END:

- BREAKING CHANGE: Filters in =org-web-track-selectors-alist= are no longer effective
  The filters, which were originally designed to serve as data processors for the values obtained by the selector, are now deprecated. Please consider integrating this process directly into the selector itself. Consequently, the format of each element in =org-web-track-selectors-alist= must be either a cons cell (URL-MATCH . SELECTOR) or a list (URL-MATCH SELECTORS...).
- Enable users to manage dynamic websites
  With the newly introduced Content-Fetcher mechanism, users can deal with dynamic sites such as JS-rendered pages as tracking targets.
- Allow users to specify HTTP headers for each individual tracking item
  Users are expected to call =org-web-track-set-http-headers= in order to define
  the HTTP headers to be sent for the tracking item at point. Additionally, the
  variable =org-web-track-default-http-headers= has been added to define HTTP
  headers for all HTTP sessions.
- Add a custom variable =org-web-track-trim-values=
  If non-nil, all values will be trimmed automatically.
- =org-web-track-use-curl= can now be a string
  The existing variable, org-web-track-use-curl, can now be a string that specifies the path for the cURL executable.
- =org-web-track-test-selector= has been removed
  Consider using =org-web-track-retrieve-values= which has almost the same argument list, instead.

* Version 0.0.3 on 2024-07-19
:PROPERTIES:
:CREATED:  [2024-07-11 Thu 14:43]
:ID:       e5022a8f-6c34-45c5-8135-a7abf2350867
:END:

- Change the default backend for fetching data from =url-retrieve= to cURL
  Users can still choose to use =url-retrieve= instead by setting
  =org-web-track-use-curl= to nil.
- Add support for Unix Domain Socket server as an access target
  In addition to the WWW server, users can optionally access an HTTP server
  listening on a Unix Domain Socket by calling =org-web-track-setup-entry= with a
  C-u prefix to define a socket path.